--- a/app/src/index.css
+++ b/app/src/index.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -5,22 +9,12 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
+  background-image: radial-gradient( circle 815px at 50% -20%,  rgba(9,29,85,1) 0.2%, rgb(1, 1, 21) 100.2% );
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
 }
 
 body {
@@ -29,15 +23,6 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 0px;
-}
-
-h4 {
-  line-height: 0px;
 }
 
 ul {
@@ -139,25 +124,9 @@ margin-bottom: 200px;
 }
 
 #tooltip:hover #tooltipText {
-top: -140%;
+top: -145%;
 visibility: visible;
 opacity: 1;
-}
-
-.headerpart1 {
-  color: #999999;
-}
-
-.headerpart2 {
-  color: #696969;
-}
-
-.text-terminal {
-  font-family:'Courier New', Courier, monospace;
-  font-weight: normal;
-  text-decoration: underline;
-  color: #f3f3f3;
-  
 }
 
 .loader {
